dfir_rs/tests/compile-fail/surface_demuxenum_port_duplicate.stderr
error: Output connection conflicts with below ($DIR/tests/compile-fail/surface_demuxenum_port_duplicate.rs:21:18) (1/2)
  --> tests/compile-fail/surface_demuxenum_port_duplicate.rs:20:18
   |
20 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^

error: Output connection conflicts with above ($DIR/tests/compile-fail/surface_demuxenum_port_duplicate.rs:20:18) (2/2)
  --> tests/compile-fail/surface_demuxenum_port_duplicate.rs:21:18
   |
21 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^
